Fix warning formatting issues

--- a/files/en-us/web/svg/element/a/index.html
+++ b/files/en-us/web/svg/element/a/index.html
@@ -59,7 +59,7 @@ svg|a:hover, svg|a:active {
 </div>
 
 <div class="warning">
-<p>Since this element shares its tag name with <a href="/en-US/docs/Web/HTML/Element/a">HTML's <code>&lt;a&gt;</code> element</a>, selecting <code>a</code> with CSS or {{domxref("Document.querySelector", "querySelector")}} may apply to the wrong kind of element. Try <a href="/en-US/docs/Web/CSS/@namespace">the <code>@namespace</code> rule</a> to distinguish the two.</p>
+<p><strong>Warning:</strong> Since this element shares its tag name with <a href="/en-US/docs/Web/HTML/Element/a">HTML's <code>&lt;a&gt;</code> element</a>, selecting <code>a</code> with CSS or {{domxref("Document.querySelector", "querySelector")}} may apply to the wrong kind of element. Try <a href="/en-US/docs/Web/CSS/@namespace">the <code>@namespace</code> rule</a> to distinguish the two.</p>
 </div>
 
 <h2 id="Attributes">Attributes</h2>
