--- a/files/en-us/web/svg/element/use/index.html
+++ b/files/en-us/web/svg/element/use/index.html
@@ -41,7 +41,7 @@ That's why the circles have different x positions, but the same stroke value.
 <p>For security reasons, browsers may apply the <a href="/en-US/docs/Web/Security/Same-origin_policy">same-origin policy</a> on <code>use</code> elements and may refuse to load a cross-origin URL in the {{SVGAttr("href")}} attribute. There is currently no defined way to set a cross-origin policy for <code>use</code> elements.</p>
 
 <div class="warning">
-<p>Since SVG 2, the {{SVGAttr("xlink:href")}} attribute is deprecated in favor of {{SVGAttr("href")}}. See {{SVGAttr("xlink:href")}} page for more information. However, {{SVGAttr("xlink:href")}} can still be required in practice for cross-browser compatibility (see the <a href="#browser_compatibility">compatibility table</a> below).</p>
+<p><strong>Warning:</strong> Since SVG 2, the {{SVGAttr("xlink:href")}} attribute is deprecated in favor of {{SVGAttr("href")}}. See {{SVGAttr("xlink:href")}} page for more information. However, {{SVGAttr("xlink:href")}} can still be required in practice for cross-browser compatibility (see the <a href="#browser_compatibility">compatibility table</a> below).</p>
 </div>
 
 <h2 id="Attributes">Attributes</h2>
