Fix some P elements that wanted to be DIVs

--- a/files/en-us/web/svg/attribute/clip/index.html
+++ b/files/en-us/web/svg/attribute/clip/index.html
@@ -45,7 +45,7 @@ browser-compat: svg.attributes.presentation.clip
 
 <h2 id="Usage_notes">Usage notes</h2>
 
-<p class="warning"><strong>Warning:</strong> This property is deprecated. Use {{cssxref("clip-path")}} instead.</p>
+<div class="warning"><p><strong>Warning:</strong> This property is deprecated. Use {{cssxref("clip-path")}} instead.</p></div>
 
 <table class="properties">
  <tbody>
