--- a/files/en-us/web/svg/attribute/fill/index.html
+++ b/files/en-us/web/svg/attribute/fill/index.html
@@ -63,7 +63,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <h2 id="altGlyph">altGlyph</h2>
 
-<p class="warning"><strong>Warning:</strong> As of SVG2 {{SVGElement('altGlyph')}} is deprecated and shouldn't be used.</p>
+<div class="warning"><p><strong>Warning:</strong> As of SVG2 {{SVGElement('altGlyph')}} is deprecated and shouldn't be used.</p></div>
 
 <p>For {{SVGElement('altGlyph')}}, <code>fill</code> is a presentation attribute that defines the color of the glyph.</p>
 
@@ -109,7 +109,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <h2 id="animateColor">animateColor</h2>
 
-<p class="warning"><strong>Warning:</strong> As of SVG Animation 2 {{SVGElement('animateColor')}} is deprecated and shouldn't be used. Use {{SVGElement('animate')}} instead.</p>
+<div class="warning"><p><strong>Warning:</strong> As of SVG Animation 2 {{SVGElement('animateColor')}} is deprecated and shouldn't be used. Use {{SVGElement('animate')}} instead.</p></div>
 
 <p>For {{SVGElement('animateColor')}}, <code>fill</code> defines the final state of the animation.</p>
 
@@ -379,7 +379,7 @@ browser-compat: svg.attributes.presentation.fill
 
 <h2 id="tref">tref</h2>
 
-<p class="warning"><strong>Warning:</strong> As of SVG2 {{SVGElement('tref')}} is deprecated and shouldn't be used.</p>
+<div class="warning"><p><strong>Warning:</strong> As of SVG2 {{SVGElement('tref')}} is deprecated and shouldn't be used.</p></div>
 
 <p>For {{SVGElement('tref')}}, <code>fill</code> is a presentation attribute that defines the color of the text.</p>
 
