--- a/files/en-us/web/svg/attribute/y/index.html
+++ b/files/en-us/web/svg/attribute/y/index.html
@@ -67,7 +67,7 @@ tags:
 
 <h2 id="altGlyph">altGlyph</h2>
 
-<p class="warning"><strong>Warning:</strong> As of SVG2 {{SVGElement('altGlyph')}} is deprecated and shouldn't be used.</p>
+<div class="warning"><p><strong>Warning:</strong> As of SVG2 {{SVGElement('altGlyph')}} is deprecated and shouldn't be used.</p></div>
 
 <p>For {{SVGElement('altGlyph')}}, <code>y</code> defines the y-axis coordinate of the alternate glyph.</p>
 
@@ -638,7 +638,7 @@ tags:
 
 <h2 id="glyphRef">glyphRef</h2>
 
-<p class="warning"><strong>Warning:</strong> As of SVG2 {{SVGElement('glyphRef')}} is deprecated and shouldn't be used.</p>
+<div class="warning"><p><strong>Warning:</strong> As of SVG2 {{SVGElement('glyphRef')}} is deprecated and shouldn't be used.</p></div>
 
 <p>For {{SVGElement('glyphRef')}}, <code>y</code> defines the y-axis coordinate of the glyph.</p>
 
@@ -829,7 +829,7 @@ line {
 
 <h2 id="tref">tref</h2>
 
-<p class="warning"><strong>Warning:</strong> As of SVG2 {{SVGElement('tref')}} is deprecated and shouldn't be used.</p>
+<div class="warning"><p><strong>Warning:</strong> As of SVG2 {{SVGElement('tref')}} is deprecated and shouldn't be used.</p></div>
 
 <p>For {{SVGElement('tref')}}, if it contain a single value, <code>y</code> defines the y coordinate on where the <em>content text position</em> must be placed. The <em>content text position</em> is usually a point on the baseline of the first line of text. The exact <em>content text position</em> is influenced by some properties like {{SVGAttr('text-anchor')}}, or {{cssxref('direction')}}.</p>
 
