--- a/files/en-us/web/svg/attribute/dy/index.html
+++ b/files/en-us/web/svg/attribute/dy/index.html
@@ -48,7 +48,7 @@ tags:
 
 <h2 id="altGlyph">altGlyph</h2>
 
-<p class="warning"><strong>Warning:</strong> As of SVG2 {{SVGElement('altGlyph')}} is deprecated and shouldn't be used.</p>
+<div class="warning"><p><strong>Warning:</strong> As of SVG2 {{SVGElement('altGlyph')}} is deprecated and shouldn't be used.</p></div>
 
 <p>For {{SVGElement('altGlyph')}}, if it contains a single value, <code>dy</code> defines a shift along the y-axis for all alternate glyph.</p>
 
@@ -115,7 +115,7 @@ tags:
 
 <h2 id="glyphRef">glyphRef</h2>
 
-<p class="warning"><strong>Warning:</strong> As of SVG2 {{SVGElement('glyphRef')}} is deprecated and shouldn't be used.</p>
+<div class="warning"><p><strong>Warning:</strong> As of SVG2 {{SVGElement('glyphRef')}} is deprecated and shouldn't be used.</p></div>
 
 <p>For {{SVGElement('glyphRef')}}, <code>dy</code> defines the y offset of the glyph, in the font metric system.</p>
 
@@ -193,7 +193,7 @@ tags:
 
 <h2 id="tref">tref</h2>
 
-<p class="warning"><strong>Warning:</strong> As of SVG2 {{SVGElement('tref')}} is deprecated and shouldn't be used.</p>
+<div class="warning"><p><strong>Warning:</strong> As of SVG2 {{SVGElement('tref')}} is deprecated and shouldn't be used.</p></div>
 
 <p>For {{SVGElement('tref')}}, if it contains a single value, <code>dy</code> defines a shift along the y-axis for all glyphs.</p>
 
