--- a/files/en-us/web/svg/attribute/transform/index.html
+++ b/files/en-us/web/svg/attribute/transform/index.html
@@ -57,7 +57,7 @@ tags:
 
 <p>The following transform functions can be used by the <code>transform</code> attribute <var><code>&lt;transform-list&gt;</code></var></p>
 
-<p class="warning"><strong>Warning:</strong> As per the spec, you should be able to also use CSS <a href="/en-US/docs/Web/CSS/transform-function">transform functions</a>. However, the compatibility isn't guaranteed.</p>
+<div class="warning"><p><strong>Warning:</strong> As per the spec, you should be able to also use CSS <a href="/en-US/docs/Web/CSS/transform-function">transform functions</a>. However, the compatibility isn't guaranteed.</p></div>
 
 <h3 id="Matrix">Matrix</h3>
 
