--- a/files/en-us/web/svg/element/set/index.html
+++ b/files/en-us/web/svg/element/set/index.html
@@ -13,7 +13,7 @@ browser-compat: svg.elements.set
 
 <p>It supports all attribute types, including those that cannot reasonably be interpolated, such as string and boolean values. For attributes that can be reasonably be interpolated, the {{SVGElement('animate')}} is usually preferred.</p>
 
-<p class="notecard note"><strong>Note:</strong> The <code>&lt;set&gt;</code> element is non-additive. The {{SVGAttr('additive')}} and {{SVGAttr('accumulate')}} attributes are not allowed, and will be ignored if specified.</p>
+<div class="notecard note"><p><strong>Note:</strong> The <code>&lt;set&gt;</code> element is non-additive. The {{SVGAttr('additive')}} and {{SVGAttr('accumulate')}} attributes are not allowed, and will be ignored if specified.</p></div>
 
 <div id="Example">
 <div class="hidden">
