[Markdown] [Web/SVG] Remove ID attributes from SVG docs (#9037)
* Remove all remaining DIV IDs from SVG

* Remove remaining ID attributes from SVG docs

* Fix a live sample

* Fix a few live samples

* Fix case of image filename

* Compress image

* Compress the other image

--- a/files/en-us/web/svg/attribute/dominant-baseline/index.html
+++ b/files/en-us/web/svg/attribute/dominant-baseline/index.html
@@ -61,7 +61,7 @@ text {
  <tbody>
   <tr>
    <th scope="row">Value</th>
-   <td><code>auto</code> <a href="https://www.w3.org/TR/css3-values/#comb-one" id="ref-for-comb-one">|</a> <code>text-bottom</code> | <code>alphabetic</code> | <code>ideographic</code> | <code>middle</code> | <code>central</code> | <code>mathematical</code> | <code>hanging</code> | <code>text-top</code></td>
+   <td><code>auto</code> <a href="https://www.w3.org/TR/css3-values/#comb-one">|</a> <code>text-bottom</code> | <code>alphabetic</code> | <code>ideographic</code> | <code>middle</code> | <code>central</code> | <code>mathematical</code> | <code>hanging</code> | <code>text-top</code></td>
   </tr>
   <tr>
    <th scope="row">Default value</th>
@@ -113,8 +113,6 @@ text {
  <dd>This value uses the top of the em box as the baseline.</dd>
 </dl>
 
-<h2 id="Example">Example</h2>
-
 <h3 id="SVG">SVG</h3>
 
 <pre class="brush: html">&lt;svg width="400" height="300" viewBox="0 0 300 300"
@@ -153,7 +151,7 @@ text {
 
 <h3 id="Result">Result</h3>
 
-<p>{{EmbedLiveSample("Example", "300", "300")}}</p>
+<p>{{EmbedLiveSample("Usage_notes", "300", "330")}}</p>
 
 <h2 id="Specifications">Specifications</h2>
 
