--- a/files/en-us/web/html/element/address/index.html
+++ b/files/en-us/web/html/element/address/index.html
@@ -67,7 +67,7 @@ browser-compat: html.elements.address
 <h2 id="Usage_notes">Usage notes</h2>
 
 <ul>
- <li>The <code>&lt;address&gt;</code> element can only be used to represent the contact information of its nearest {{HTMLElement("article")}} or {{HTMLElement("body")}} element ancestor.</li>
+ <li>The <code>&lt;address&gt;</code> element can only be used to represent the contact information for its nearest {{HTMLElement("article")}} or {{HTMLElement("body")}} element ancestor.</li>
  <li>This element should not contain more information than the contact information, like a publication date (which belongs in a {{HTMLElement("time")}} element).</li>
  <li>Typically an <code>&lt;address&gt;</code> element can be placed inside the {{HTMLElement("footer")}} element of the current section, if any.</li>
 </ul>
