Fix grammar in animatemotion docs

--- a/files/en-us/web/svg/element/animatemotion/index.html
+++ b/files/en-us/web/svg/element/animatemotion/index.html
@@ -9,7 +9,7 @@ browser-compat: svg.elements.animateMotion
 ---
 <div>{{SVGRef}}</div>
 
-<p>The SVG <strong><code>&lt;animateMotion&gt;</code></strong> element let define how an element moves along a motion path.</p>
+<p>The SVG <strong><code>&lt;animateMotion&gt;</code></strong> element provides a way to define how an element moves along a motion path.</p>
 
 <div class="notecard note">
 <p><strong>Note:</strong> To reuse an existing path, it will be necessary to use an {{SVGElement("mpath")}} element inside the <code>&lt;animateMotion&gt;</code> element instead of the {{SVGAttr("path")}} attribute.</p>
@@ -50,7 +50,7 @@ browser-compat: svg.elements.animateMotion
 </dl>
 
 <div class="notecard note">
-<p><strong>Note:</strong> For <code>&lt;animateMotion&gt;</code> the default value for the {{SVGAttr("calcMode")}} attribute is <code>paced</code></p>
+<p><strong>Note:</strong> For <code>&lt;animateMotion&gt;</code> the default value for the {{SVGAttr("calcMode")}} attribute is <code>paced</code>.</p>
 </div>
 
 <h3 id="Animation_Attributes">Animation Attributes</h3>
