--- a/files/en-us/web/svg/element/animatemotion/index.html
+++ b/files/en-us/web/svg/element/animatemotion/index.html
@@ -50,7 +50,7 @@ browser-compat: svg.elements.animateMotion
 </dl>
 
 <div class="notecard note">
-<p><strong>Note:</strong> For <code>&lt;animateMotion&gt;</code> the default value for the {{SVGAttr("calcMode")}} attribute is <code>paced</code>.</p>
+<p><strong>Note:</strong> For <code>&lt;animateMotion&gt;</code>, the default value for the {{SVGAttr("calcMode")}} attribute is <code>paced</code>.</p>
 </div>
 
 <h3 id="Animation_Attributes">Animation Attributes</h3>
