--- a/files/en-us/glossary/user_agent/index.html
+++ b/files/en-us/glossary/user_agent/index.html
@@ -18,7 +18,7 @@ tags:
 
 <p>Spam bots, download managers, and some browsers often send a fake UA string to announce themselves as a different client. This is known as <em>user agent spoofing</em>.</p>
 
-<p>The user agent string can be accessed with {{Glossary("JavaScript")} on the client side using the {{domxref("Navigator/userAgent", "NavigatorID.userAgent")}} property.</p>
+<p>The user agent string can be accessed with {{Glossary("JavaScript")}} on the client side using the {{domxref("Navigator/userAgent", "NavigatorID.userAgent")}} property.</p>
 
 <p>A typical user agent string looks like this: <code>"Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:35.0) Gecko/20100101 Firefox/35.0"</code>.</p>
 
