--- a/files/en-us/glossary/mixin/index.html
+++ b/files/en-us/glossary/mixin/index.html
@@ -8,7 +8,9 @@ tags:
   - Mixin
   - Property
 ---
-<p><span class="seoSummary">A <em>mixin</em> is a {{Glossary("class")}} (interface, in WebAPI spec terms) in which some or all of its {{Glossary("method", "methods")}} and/or {{Glossary("property", "properties")}} are unimplemented, requiring that another {{Glossary("class")}} or {{Glossary("interface")}} provide the missing implementations.</span> The new class or interface then includes both the properties and methods from the mixin as well as those it defines itself. All of the methods and properties are used exactly the same regardless of whether they're implemented in the mixin or the interface or class that implements the mixin.</p>
+<p>A <em>mixin</em> is a {{Glossary("class")}} (interface, in WebAPI spec terms) in which some or all of its {{Glossary("method", "methods")}} and/or {{Glossary("property", "properties")}} are unimplemented, requiring that another {{Glossary("class")}} or {{Glossary("interface")}} provide the missing implementations.</p>
+
+<p>The new class or interface then includes both the properties and methods from the mixin as well as those it defines itself. All of the methods and properties are used exactly the same regardless of whether they're implemented in the mixin or the interface or class that implements the mixin.</p>
 
 <p>The advantage of mixins is that they can be used to simplify the design of APIs in which multiple interfaces need to include the same methods and properties.</p>
 
@@ -19,5 +21,5 @@ tags:
 <h3 id="General_knowledge">General knowledge</h3>
 
 <ul>
- <li><a class="external external-icon" href="https://en.wikipedia.org/wiki/Mixin">Mixin</a> on Wikipedia</li>
+ <li><a href="https://en.wikipedia.org/wiki/Mixin">Mixin</a> on Wikipedia</li>
 </ul>
