Incorrect IMG tag attribute
<img> tag was used  with `href` attibute instead of `src`

--- a/files/en-us/learn/html/howto/author_fast-loading_html_pages/index.html
+++ b/files/en-us/learn/html/howto/author_fast-loading_html_pages/index.html
@@ -137,7 +137,7 @@ tags:
 
 <p>To mark an image for lazy loading, specify its {{htmlattrxref("loading", "img")}} attribute with a value of <code>lazy</code>. With this set, the image will only be loaded when it's needed.</p>
 
-<pre class="brush: html">&lt;img href="./images/footerlogo.jpg" loading="lazy"&gt;</pre>
+<pre class="brush: html">&lt;img src="./images/footerlogo.jpg" loading="lazy"&gt;</pre>
 
 <p>Note that lazily-loaded images may not be available when the <code>load</code> event is fired. You can determine if a given image is loaded by checking to see if the value of its Boolean {{domxref("HTMLImageElement.complete", "complete")}} property is <code>true</code>.</p>
 
