--- a/files/en-us/web/svg/attribute/points/index.html
+++ b/files/en-us/web/svg/attribute/points/index.html
@@ -61,9 +61,7 @@ tags:
  </tbody>
 </table>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="-10 -10 120 120" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;!-- polyline is an open shape --&gt;
@@ -96,9 +94,7 @@ tags:
  </tbody>
 </table>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="-10 -10 120 120" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;!-- polygon is an closed shape --&gt;
