--- a/files/en-us/web/svg/attribute/transform/index.html
+++ b/files/en-us/web/svg/attribute/transform/index.html
@@ -65,10 +65,7 @@ tags:
 
 <h4 id="Example">Example</h4>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }
-</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;rect x="10" y="10" width="30" height="20" fill="green" /&gt;
@@ -115,10 +112,7 @@ tags:
 
 <h4 id="Example_2">Example</h4>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }
-</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;!-- No translation --&gt;
@@ -145,10 +139,7 @@ tags:
 
 <h4 id="Example_3">Example</h4>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }
-</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="-50 -50 100 100" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;!-- uniform scale --&gt;
@@ -175,10 +166,7 @@ tags:
 
 <h4 id="Example_4">Example</h4>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }
-</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="-12 -2 34 14" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;rect x="0" y="0" width="10" height="10" /&gt;
@@ -200,10 +188,7 @@ tags:
 
 <h4 id="Example_5">Example</h4>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }
-</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="-5 -5 10 10" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;rect x="-3" y="-3" width="6" height="6" /&gt;
@@ -220,10 +205,7 @@ tags:
 
 <h4 id="Example_6">Example</h4>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }
-</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="-5 -5 10 10" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;rect x="-3" y="-3" width="6" height="6" /&gt;
