--- a/files/en-us/web/svg/attribute/x2/index.html
+++ b/files/en-us/web/svg/attribute/x2/index.html
@@ -49,9 +49,7 @@ tags:
  </tbody>
 </table>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 10 10" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;line x1="5" x2="1" y1="1" y2="9" stroke="red"   /&gt;
@@ -82,9 +80,7 @@ tags:
  </tbody>
 </table>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 20 10" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;!--
