--- a/files/en-us/web/svg/attribute/color/index.html
+++ b/files/en-us/web/svg/attribute/color/index.html
@@ -35,11 +35,9 @@ browser-compat: svg.attributes.presentation.color
 
 <h2 id="Example">Example</h2>
 
-<div class="hidden">
-<pre class="brush: css">html, body, svg {
+<pre class="brush: css hidden">html, body, svg {
   height: 100%;
 }</pre>
-</div>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;g color="green"&gt;
