--- a/files/en-us/web/svg/attribute/cx/index.html
+++ b/files/en-us/web/svg/attribute/cx/index.html
@@ -103,9 +103,7 @@ tags:
 
 <h4 id="Example">Example</h4>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="0 0 34 10" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;defs&gt;
