--- a/files/en-us/web/svg/attribute/fill-rule/index.html
+++ b/files/en-us/web/svg/attribute/fill-rule/index.html
@@ -73,9 +73,7 @@ browser-compat: svg.attributes.presentation.fill-rule
 
 <h4 id="Example">Example</h4>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="-10 -10 320 120" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;!-- Effect of nonzero fill rule on crossing path segments --&gt;
@@ -109,9 +107,7 @@ browser-compat: svg.attributes.presentation.fill-rule
 
 <h4 id="Example_2">Example</h4>
 
-<div class="hidden">
-<pre class="brush: css">html,body,svg { height:100% }</pre>
-</div>
+<pre class="brush: css hidden">html,body,svg { height:100% }</pre>
 
 <pre class="brush: html">&lt;svg viewBox="-10 -10 320 120" xmlns="http://www.w3.org/2000/svg"&gt;
   &lt;!-- Effect of evenodd fill rule on crossing path segments --&gt;
